--- a/1.12.2/client/.gitattributes
+++ b/1.12.2/client/.gitattributes
@@ -1,1 +1,3 @@
 noskpack1.zip filter=lfs diff=lfs merge=lfs -text
+last[[:space:]]working[[:space:]]build/ filter=lfs diff=lfs merge=lfs -text
+noskpack1/ filter=lfs diff=lfs merge=lfs -text
