--- a/1.12.2/client/noskpack1/resourcepacks/.gitattributes
+++ b/1.12.2/client/noskpack1/resourcepacks/.gitattributes
@@ -1,1 +1,4 @@
 PureBDcraft[[:space:]]512x[[:space:]]MC112.zip filter=lfs diff=lfs merge=lfs -text
+PureBDcraft[[:space:]]128x[[:space:]]MC112.zip filter=lfs diff=lfs merge=lfs -text
+PureBDcraft[[:space:]]256x[[:space:]]MC112.zip filter=lfs diff=lfs merge=lfs -text
+PureBDcraft[[:space:]]512x[[:space:]]MC112.zip filter=lfs diff=lfs merge=lfs -text
