--- a/1.12.2/client/noskpack1/config/realdrops.cfg
+++ b/1.12.2/client/noskpack1/config/realdrops.cfg
@@ -11,7 +11,7 @@ general {
     B:"Dupe Workaround"=true
 
     # Render items the old way (Client Side Only) [default: false]
-    B:"Old Items"=true
+    B:"Old Items"=false
 
     # Affects pickup accuracy tolerance [range: 0.01 ~ 1.0, default: 0.2]
     S:"Pickup Radius"=1.0
