--- a/1.12.2/server/server itself/server.properties
+++ b/1.12.2/server/server itself/server.properties
@@ -1,37 +1,38 @@
 #Minecraft server properties
-#Mon Jul 30 20:14:22 CEST 2018
-view-distance=10
-max-build-height=256
-server-ip=
-level-seed=
-gamemode=0
-server-port=25565
-enable-command-block=false
-allow-nether=true
-enable-rcon=false
-op-permission-level=4
-enable-query=false
-prevent-proxy-connections=false
-generator-settings=
-resource-pack=
-player-idle-timeout=0
-level-name=world
-motd=A Minecraft Server
-force-gamemode=false
-hardcore=false
-white-list=false
-pvp=true
-spawn-npcs=true
-generate-structures=true
-spawn-animals=true
-snooper-enabled=true
-difficulty=1
-network-compression-threshold=256
-level-type=DEFAULT
-spawn-monsters=true
+#Mon Jul 30 20:45:03 CEST 2018
 max-tick-time=60000
+generator-settings=
+force-gamemode=false
+allow-nether=true
+gamemode=0
+broadcast-console-to-ops=true
+enable-query=false
+player-idle-timeout=0
+difficulty=1
+spawn-monsters=true
+op-permission-level=4
+pvp=true
+snooper-enabled=true
+level-type=DEFAULT
+hardcore=false
+enable-command-block=false
 max-players=20
+network-compression-threshold=256
 resource-pack-sha1=
-online-mode=true
-allow-flight=false
 max-world-size=29999984
+server-port=25565
+server-ip=192.168.1.200
+spawn-npcs=true
+allow-flight=false
+level-name=world
+view-distance=10
+resource-pack=
+spawn-animals=true
+white-list=false
+generate-structures=true
+online-mode=true
+max-build-height=256
+level-seed=
+prevent-proxy-connections=false
+enable-rcon=false
+motd=A Minecraft Server
