--- a/1.12.2/server/serverBase/serverFiles/server.properties
+++ b/1.12.2/server/serverBase/serverFiles/server.properties
@@ -3,13 +3,13 @@
 generator-settings=
 op-permission-level=4
 allow-nether=true
-level-name=world
+level-name=Biome Bundle
 enable-query=false
 allow-flight=true
 prevent-proxy-connections=false
 server-port=25565
 max-world-size=29999984
-level-type=DEFAULT
+level-type=OTG
 enable-rcon=false
 level-seed=
 force-gamemode=false
